--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,12 @@ img {
 
 #addEmployee {
     border-radius: 24px;
-    padding: 8px 0px;
-    width: 183px;
+    padding: 10px 0px;
+    width: 185px;
     font-size: 16px;
     margin-top: 12px;
     background-color: rgb(0, 187, 255);
+    border: none;
 }
 
 
@@ -65,4 +66,14 @@ img {
     font-size: 20px;
     cursor: pointer;
     background-color: #b4f2ff;
+}
+
+.parent_container {
+    margin: 20px;
+    display: flex;
+    gap: 20px;
+}
+
+input[type=text]:focus {
+    outline: none;
 }
