--- a/src/component/css/form.css
+++ b/src/component/css/form.css
@@ -5,7 +5,6 @@ body {
 
 .ModalBackground {
     width: 100%;
-    height: 150%;
     background-color: rgba(200, 200, 200);
     position: absolute;
     top: 0px;
@@ -82,3 +81,23 @@ input[type=radio] {
     background-color: crimson;
 }
 
+.model_background {
+    background-color: #c8c8c8;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.ModalBackground {
+    overflow: scroll;
+}
+
+.ModalBackground::-webkit-scrollbar {
+    display: none
+}
